--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,6 @@ google-auth-oauthlib
 google_images_download>=2.7.1
 googletrans>=2.4.0
 gsearch
-hachoir
 heroku3
 httplib2<0.16.0
 humanize
@@ -52,17 +51,12 @@ urbandict
 wikipedia>=1.4.0
 youtube-dl
 wheel
-aiohttp
-aiofiles
-aria2p
-async_generator
 cowpy
 psutil
 wget
 TgCrypto>=1.2.0
 cffi>=1.0.0
 dnspython
-emoji
 PyPDF2
 cryptg
 patool
@@ -73,8 +67,7 @@ google-auth-oauthlib
 gTTS>=2.1.1
 gTTS-token>=1.1.3
 hachoir>=3.0a5
-REPO_LINK
-heroku3>=3.4.0	
+REPO_LINK	
 httplib2>=0.18.0
 humanize 
 lxml
@@ -94,7 +87,7 @@ requests>=2.18.4
 search-engine-parser>=0.6.1
 speedtest-cli>=2.0.2
 sqlalchemy<=1.3.23
-telethon>=1.14.0 
+telethon
 telethon-session-sqlalchemy>=0.2.6
 urbandict>=0.5
 wikipedia>=1.4.0
@@ -142,7 +135,6 @@ colour
 scipy
 wordcloud
 opencv-python
-youtube-dl>=2021.1.8
 youtube-search-python>=1.3.2
 youtube-search>=1.1.1
 pendulum
