--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,16 @@
-Pillow>=5.3.0
-PyGithub
-aiofiles
+wheel
+heroku3
 aiohttp
+aiofiles
 aria2p
 async_generator
-beautifulsoup4
-bs4
-bwb==3.0.0
-cfscrape
-coffeehouse
-cowpy
-cryptg
-dnspython
-emoji
-geopy
-gTTS-token>=1.1.3
-gitpython
-google-api-python-client==1.8.0
-google-auth-oauthlib
-google_images_download>=2.7.1
-googletrans>=2.4.0
-gsearch
-heroku3
-humanize
-lxml
-oauth2client
-psycopg2
-psycopg2-binary
-pySmartDL
-pybase64>=0.4.0
-pyfiglet
-pylast
-pymongo
-python-barcode
-python-dotenv
-python-magic
-pytube
-pytz
-qrcode
-regex
-requests>=2.18.4
-search-engine-parser>=0.4.2
-selenium
-speedtest-cli>=2.0.2
-sqlalchemy>=1.2
-asyncurban
-urbandict
-wikipedia>=1.4.0
-youtube-dl
-wheel
 cowpy
 psutil
 wget
 TgCrypto>=1.2.0
 cffi>=1.0.0
 dnspython
+emoji
 PyPDF2
 cryptg
 patool
@@ -62,14 +18,18 @@ gitpython
 asyncurban
 google-api-python-client==1.8.0
 google-auth-oauthlib
+googletrans==3.1.0a0
+google_images_download>=2.7.1
 gTTS>=2.1.1
 gTTS-token>=1.1.3
 hachoir>=3.0a5
-REPO_LINK	
+REPO_LINK
+heroku3>=3.4.0	
 httplib2>=0.18.0
 humanize 
 lxml
 oauth2client
+Pillow>=6.0.0
 fontTools
 psycopg2
 psycopg2-binary
@@ -83,7 +43,8 @@ qrcode
 requests>=2.18.4
 search-engine-parser>=0.6.1
 speedtest-cli>=2.0.2
-telethon
+sqlalchemy<=1.3.23
+telethon>=1.14.0 
 telethon-session-sqlalchemy>=0.2.6
 urbandict>=0.5
 wikipedia>=1.4.0
@@ -131,6 +92,7 @@ colour
 scipy
 wordcloud
 opencv-python
+youtube-dl>=2021.1.8
 youtube-search-python>=1.3.2
 youtube-search>=1.1.1
 pendulum
