--- a/app.json
+++ b/app.json
@@ -123,5 +123,11 @@
       "value": "ENABLE",
       "required": false 
     }
-  }
-}
+  },
+  "addons": [{
+   "plan": "heroku-postgresql",
+   "options": {
+    "version": "12"
+   }
+  }]
+ }
