--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,100 @@
-telegraph
+#pip
+#virtualenv
+#setuptools
+#wheel
+Pillow
+webdriver-manager
+redshift-sqlalchemy
+folium
+pokedex.py
+#pymediainfo
+scipy
+scikit-learn
+#MediaInfo
+moviepy
+glitch_this
+PyGithub
+aiofiles
 aiohttp
-TgCrypto
-asyncio
-aiohttp
+aria2p 
+cloudmersive_virus_api_client 
+psutil
+cryptg
+async_generator
+jikanpy
+#opencv-python--headless
+opencv-contrib-python-headless 
+keyboard
 beautifulsoup4
+bs4
+bwb
+wand
+pyrogram
+telegram
+lottie
+colour
+cfscrape
+bash
+coffeehouse
+show
+instantmusic
+covid
+telethon
+gsearch
+pyfiglet
+pymongo
+python-magic
+pytube
+regex
+selenium
+telegraph
+pendulum
+asyncurban
+urbandict
+wikipedia
+cowpy
+cffi
+dnspython
 emoji
 gitpython
-heroku3
-hachoir
-Pillow
-psycopg2-binary
-sqlalchemy==1.3.23
-youtube-dl
-pySmartDL
-google-api-python-client
-google-auth-httplib2
+google-api-python-client==1.7.11
 google-auth-oauthlib
-oauth2client
+#googletrans
+googletrans==4.0.0-rc1
+google_images_download
+gTTS
+gTTS-token 
+eyed3
+hachoir
+heroku
+heroku3==4.2.3
+httplib2==0.13.1
+humanize
+lxml
+lyricsgenius
+python-telegram-bot
+oauth2client==4.1.3
+html_telegraph_poster
+psycopg2
+psycopg2-binary
+pybase64
+pyfiglet
+pylast
+pySmartDL
+python-barcode
+python-dotenv
+youtube-dl
+pytz
+qrcode
+#requests==2.25.0
+requests
+search-engine-parser
+speedtest-cli==2.1.2
+sqlalchemy==1.3.23
+python-dateutil
+spamwatch
+virustotal_python
+youtube-search-python==1.3.2
+validators
+numpy
+fontTools
